--- a/.vscode/memmap.cfg
+++ b/.vscode/memmap.cfg
@@ -8,6 +8,7 @@ MEMORY {
 	RAM:		start = $0400, size = $0400, type = rw, define = yes;
 	STACK:		start = $0200, size = $0200, type = rw, define = yes;
 	SRAM:		start = $6000, size = $2000, type = rw, define = yes;
+	USER_MEM:	start = $0700, size = $0100, type = rw, define = yes;
 }
 
 # セグメントマップ
@@ -21,6 +22,7 @@ SEGMENTS {
 	ZEROPAGE:	load = ZP,					type = rw;
 	CODE:		load = ROMST,				type = ro,	define = yes;
 	CHARS:		load = ROMCHR,				type = ro;
+	USER_MEM:	load = USER_MEM,			type = rw;
 }
 
 FEATURES {
