スプライト表示

--- a/.vscode/memmap.cfg
+++ b/.vscode/memmap.cfg
@@ -5,9 +5,9 @@ MEMORY {
 	ROMINFO:	start = $fffa, size = $0006, type = ro, file = %O, fill = yes, define = yes;
 	ROMCHR:		start = $0000, size = $2000, type = rw, define = yes;
 	ZP:			start = $0000, size = $0100, type = rw, define = yes;
-	RAM:		start = $0400, size = $0400, type = rw, define = yes;
-	STACK:		start = $0200, size = $0200, type = rw, define = yes;
-	SRAM:		start = $6000, size = $2000, type = rw, define = yes;
+	RAM:		start = $0200, size = $0600, type = rw, define = yes;
+	DMA_MEM:	start = $0300, size = $0100, type = rw, define = yes;
+	BUFF_MEM:	start = $0200, size = $0100, type = rw, define = yes;
 	USER_MEM:	start = $0700, size = $0100, type = rw, define = yes;
 }
 
@@ -22,6 +22,8 @@ SEGMENTS {
 	ZEROPAGE:	load = ZP,					type = rw;
 	CODE:		load = ROMST,				type = ro,	define = yes;
 	CHARS:		load = ROMCHR,				type = ro;
+	DMA_MEM:	load = DMA_MEM,				type = rw;
+	BUFF_MEM:	load = BUFF_MEM, 			type = rw;
 	USER_MEM:	load = USER_MEM,			type = rw;
 }
 
