--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+mario.dbg
+mario.lst
+mario.map
+mario.nes.objdata
+mario.o
+smb.o
+smb.s
+spr_bg - コピー.chr
 Super Mario Bros. (World).nes
 Super Mario Bros. (World)..nes.chrdata
 Super Mario Bros. (World)..nes.objdata
