remove ignored files(retry)

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ smb.o
 smb.s
 spr_bg - コピー.chr
 Super Mario Bros. (World).nes
-Super Mario Bros. (World)..nes.chrdata
-Super Mario Bros. (World)..nes.objdata
+Super Mario Bros..nes.chrdata
+Super Mario Bros..nes.objdata
